feat: Enhance bookmark synchronization and modernize project dependencies
This commit introduces a manual update feature for bookmarks, improves unread chapter tracking, and refactors the Comix source integration for better reliability. It also includes significant updates to the project's build configuration and library versions.

- **Bookmark Improvements**:
    - Added a "Update" button to `BookmarksPage` to trigger a global synchronization of bookmarked manga with their respective sources.
    - Refactored `loadBookmarks` logic to sort the list, prioritizing manga with unread chapters based on user history.
    - Implemented sync throttling in `BookmarksAdapter` using `SharedPreferences` to limit network-based chapter checks to once every 24 hours per manga.
    - Added a visual notification dot to bookmark items when a new chapter is detected.
    - Expanded `BookmarkDao` with methods to update and retrieve the last known chapter from the local database.

- **Comix Source Refactoring**:
    - Updated `ComixFeedService` CSS selectors (`.mpage__title`, `.mpage__desc`, etc.) to match site changes.
    - Rewrote `ComixChapterListService` to use a more robust JavaScript-based scraping approach that handles pagination automatically via the WebView.
    - Optimized `ComixChapterPagesService` to generate image URL sequences from an identified pattern, improving loading speed for chapter images.

- **Project Modernization**:
    - Upgraded Gradle wrapper to 9.4.1 and Android Gradle Plugin to 9.2.1.
    - Lowered `minSdk` from 35 to 24 to improve device compatibility.
    - Updated core dependencies:
        - Room (2.5.2 -> 2.8.4)
        - Glide (4.16.0 -> 5.0.7)
        - OkHttp (4.12.0 -> 5.3.2)
        - Jsoup (1.17.2 -> 1.22.2)
    - Simplified `gradle.properties` by removing redundant configuration flags.

- **General**:
    - Renamed `MangaPageModel` to `NotificationModel` and updated its structure to support chapter tracking.
    - Fixed a missing `break` in `Se